[package]
name = "error"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "1.4.6"
r2d2 = "0.8.9"
strum = "0.20.0"
tokio-diesel = {git = "https://github.com/mehcode/tokio-diesel" }
