[package]
name = "jotoba"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
news = { path = "../lib/news" }
types = { path = "../lib/types" }
sentence_reader = { path = "../lib/sentence_reader" }
search = { path = "../lib/search" }
api = { path = "../lib/api" }
frontend = { path = "../lib/frontend" }
config = { path = "../lib/config" }
localization = { path = "../lib/localization" }
resources = { path = "../lib/resources" }
indexes = { path = "../lib/indexes", features = ["parallel"] }
actix-files = "0.6.1"
actix-web = "4.1.0"
argparse = "0.2.2"
env_logger = "0.9.0"
log = "0.4.17"
sentry = { version = "0.27.0", optional = true }
rayon = "1.5.3"
snmalloc-rs = "0.3.3"

[features]
default = ["img_scan"]

sentry_error = ["sentry", "frontend/sentry_error"]
img_scan = ["api/img_scan"]
news_inotify = ["news/news_inotify"]

[dev-dependencies]
criterion = "0.3.5"
japanese = { path = "../lib/japanese" }

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "resources"
harness = false

[[bench]]
name = "japanese"
harness = false
