[package]
name = "models"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse = { path = "../parse" }
japanese = { path = "../japanese" }
cache = { path = "../cache" }
error = { path = "../error" }
utils = { path = "../utils" }
diesel = { version = "1.4.6", features = ["postgres","r2d2"] }
dotenv = "0.15.0"
itertools = "0.10.0"
once_cell = "1.7.2"
r2d2 = "0.8.9"
romaji = "0.1.1"
tokio = { version = "1.6.1", features = ["macros","rt-multi-thread","sync"] }
tokio-diesel = {git = "https://github.com/mehcode/tokio-diesel" }
futures = "0.3.15"
async-std = "1.9.0"

[features]
default = []
tokenizer = []
