[package]
name = "search"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse = { path = "../parse" }
japanese = { path = "../japanese" }
models = { path = "../models" }
cache = { path = "../cache" }
error = { path = "../error" }
utils = { path = "../utils" }
serde = "1.0.126"
itertools = "0.10.0"
diesel = { version = "1.4.6", features = ["postgres","r2d2"] }
tokio-diesel = {git = "https://github.com/mehcode/tokio-diesel" }
futures = "0.3.15"
async-std = "1.9.0"
once_cell = "1.7.2"
levenshtein = "1.0.5"

[features]
tokenizer = []
default = []
