[package]
name = "api"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

[dependencies]
japanese = { path = "../japanese" }
news = { path = "../news" }
error = { path = "../error", features = ["web_error"] }
sentence_reader = { path = "../sentence_reader" }
search = { path = "../search" }
utils = { path = "../utils" }
config = { path = "../config" }
resources = { path = "../resources" }
indexes = { path = "../indexes" }
types = { path = "../types", default-features = false }
actix-web = "4.1.0"
actix-multipart = "0.4.0"
itertools = "0.10.3"
once_cell = "1.12.0"
serde = "1.0.137"
romaji = "0.1.1"
log = "0.4.17"
#jpeudex = { path = "../../../jpeudex"}
jpeudex = { git = "https://github.com/JojiiOfficial/jpeudex" }
bincode = "1.3.3"
regex = "1.5.6"
rayon = "1.5.3"
#autocompletion = { path = "../../../AutosuggestionFramework" }
autocompletion = { git = "https://github.com/WeDontPanic/AutoCompletionFramework" }
intmap = { git = "https://github.com/JojiiOfficial/rust-intmap" }
priority_container = "0.1.1"
futures = { version = "0.3.21", optional = true }
leptess = { version = "0.13.2", optional = true }
order_struct = { git = "https://github.com/JojiiOfficial/OrderStruct" }
#ids_parser = { path = "../../../ids_parser" }
ids_parser = { git = "https://github.com/JojiiOfficial/IDS-Parser" }

[features]
default = []
img_scan = ["leptess", "futures"]
