[package]
name = "api"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

[dependencies]
japanese = { path = "../japanese" }
engine = { path = "../engine" }
news = { path = "../news" }
error = { path = "../error", features = ["web_error"] }
sentence_reader = { path = "../sentence_reader" }
search = { path = "../search" }
utils = { path = "../utils" }
config = { path = "../config" }
resources = { path = "../resources" }
indexes = { path = "../indexes" }
types = { path = "../types", default-features = false }
actix-web = "4.1.0"
actix-multipart = "0.4.0"
itertools = "0.10.3"
once_cell = { version = "1.13.1", default-features = false }
serde = "1.0.144"
log = "0.4.17"
wana_kana = "2.1.0"
#jpeudex = { path = "../../../jpeudex"}
jpeudex = { git = "https://github.com/JojiiOfficial/jpeudex" }
bincode = "1.3.3"
regex = { version = "1.6.0", features = ["std"], default-features = false }
rayon = "1.5.3"
#autocompletion = { path = "../../../AutoCompletionFramework" }
autocompletion = { git = "https://github.com/WeDontPanic/AutoCompletionFramework" }
intmap = { git = "https://github.com/JojiiOfficial/rust-intmap" }
priority_container = "0.1.1"
futures = { version = "0.3.23", optional = true }
leptess = { version = "0.13.2", optional = true }
order_struct = { git = "https://github.com/JojiiOfficial/OrderStruct" }
#ids_parser = { path = "../../../ids_parser" }
ids_parser = { git = "https://github.com/JojiiOfficial/IDS-Parser" }
#index_framework = { path = "../../../index_framework" }
index_framework = { git = "https://github.com/WeDontPanic/index_framework" }
serde_json = "1.0.85"

[features]
default = []
img_scan = ["leptess", "futures"]
