[package]
name = "api"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

[dependencies]
japanese = { path = "../japanese" }
engine = { path = "../engine" }
news = { path = "../news" }
error = { path = "../error", features = ["web_error"] }
sentence_reader = { path = "../sentence_reader" }
search = { path = "../search" }
utils = { path = "../utils" }
config = { path = "../config" }
resources = { path = "../resources" }
indexes = { path = "../indexes" }
types = { path = "../types", default-features = false }
actix-web = "4.2.1"
actix-multipart = "0.4.0"
itertools = "0.10.5"
once_cell = { version = "1.16.0", default-features = false }
serde = "1.0.151"
log = "0.4.17"
wana_kana = { git = "https://github.com/WeDontPanic/wana_kana_rust" }
#jpeudex = { path = "../../../jpeudex"}
jpeudex = { git = "https://github.com/JojiiOfficial/jpeudex" }
bincode = "1.3.3"
regex = { version = "1.7.0", features = ["std"], default-features = false }
rayon = "1.6.1"
#autocompletion = { path = "../../../AutoCompletionFramework" }
autocompletion = { git = "https://github.com/WeDontPanic/AutoCompletionFramework" }
intmap = { git = "https://github.com/JojiiOfficial/rust-intmap" }
#priority_container = "0.1.1"
priority_container = { git = "https://github.com/JojiiOfficial/PrioContainer/" }
futures = { version = "0.3.25", optional = true }
leptess = { version = "0.13.4", optional = true }
order_struct = { git = "https://github.com/JojiiOfficial/OrderStruct" }
#ids_parser = { path = "../../../ids_parser" }
ids_parser = { git = "https://github.com/JojiiOfficial/IDS-Parser" }
#index_framework = { path = "../../../index_framework" }
index_framework = { git = "https://github.com/WeDontPanic/index_framework" }
serde_json = "1.0.90"
jp_utils = { git = "https://github.com/JojiiOfficial/jp_utils"}

[features]
default = []
img_scan = ["leptess", "futures"]
