[package]
name = "config"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
serde_derive = "1.0.133"
toml = "0.5.8"
sha1 = { git = "https://github.com/mitsuhiko/rust-sha1"}
