[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexes = { path = "../indexes" }
resources = { path = "../resources" }
types = { path = "../types", default-features = false, features = [
  "jotoba_intern",
] }
#priority_container = { path = "../../../priority_container" }
priority_container = { git = "https://github.com/JojiiOfficial/PrioContainer/" }
order_struct = { git = "https://github.com/JojiiOfficial/OrderStruct" }
#index_framework = { path = "../../../index_framework"}
index_framework = { git = "https://github.com/WeDontPanic/index_framework" }
#vsm = { path = "../../../vsm" }
vsm = { git = "https://github.com/JojiiOfficial/VSM" }
sparse_vec = { git = "https://github.com/JojiiOfficial/SparseVec"}
