[package]
name = "error"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", optional = true }
serde = "1.0.144"
strum = "0.24.1"
thiserror = "1.0.35"

[features]
default = []
web_error = ["actix-web"]
