[package]
name = "error"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", optional = true }
serde = "1.0.171"
strum = "0.25.0"
thiserror = "1.0.43"

[features]
default = []
web_error = ["actix-web"]
