[package]
name = "frontend"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
japanese = { path = "../japanese" }
news = { path = "../news"}
search = { path = "../search" }
error = { path = "../error" }
utils = { path = "../utils" }
config = { path = "../config" }
localization = { path = "../localization" }
resources = { path = "../resources"}
actix-web = "4.2.1"
serde = "1.0.151"
sentry = { version = "0.29.1", optional = true }
log = "0.4.17"
percent-encoding = "2.2.0"
types = { path = "../types" , features = ["jotoba_intern"]}
itertools = "0.10.5"

[dev-dependencies]
ructe = "0.15.0"

[build-dependencies]
ructe = "0.15.0"

[features]
sentry_error = ["sentry"]
