[package]
name = "import"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse = { path = "../parse" }
japanese = { path = "../japanese" }
models = { path = "../models" }
cache = { path = "../cache" }
error = { path = "../error" }
utils = { path = "../utils" }
search = { path = "../search" }
itertools = "0.10.1"
serde = "1.0.127"
serde_json = "1.0.66"
futures = "0.3.16"
async-std = "1.9.0"
deadpool-postgres = "0.9.0"
