[package]
name = "indexes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
#vector_space_model2 = { path = "../../../VectorSpaceModel" }
vector_space_model2 = { git = "https://github.com/JojiiOfficial/VectorSpaceModel" }
autocompletion = { git = "https://github.com/WeDontPanic/AutoCompletionFramework" }
#autocompletion = { path = "../../../AutosuggestionFramework" }
bktree = { git = "https://github.com/JojiiOfficial/bktree" }
serde = { version = "1.0.137", features = ["derive"] }
byteorder = "1.4.3"
bitflags = { git = "https://github.com/JojiiOfficial/BitFlags" }
once_cell = "1.12.0"
bincode = "1.3.3"
log = "0.4.17"
rayon = { version = "1.5.3", optional = true }

[features]
default = []
parallel = ["rayon"]
