[package]
name = "indexes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
autocompletion = { git = "https://github.com/WeDontPanic/AutoCompletionFramework" }
#autocompletion = { path = "../../../AutoCompletionFramework" }
bktree = { git = "https://github.com/JojiiOfficial/bktree" }
serde = { version = "1.0.151", features = ["derive"] }
byteorder = "1.4.3"
bitflags = { git = "https://github.com/JojiiOfficial/BitFlags" }
once_cell = { version = "1.16.0", default-features = false }
bincode = "1.3.3"
log = "0.4.17"
rayon = { version = "1.6.1", optional = true }
qp-trie = { git = "https://github.com/sdleffler/qp-trie-rs", features = [
  "serde",
] }
#ngindex = { path = "../../../ngindex" }
ngindex = { git = "https://github.com/JojiiOfficial/ngindex" }
#vsm = { path = "../../../vsm"}
vsm = { git = "https://github.com/JojiiOfficial/VSM"}
index_framework = { git = "https://github.com/WeDontPanic/index_framework"}
ngram-tools = { git = "https://github.com/JojiiOfficial/ngram-tools"}
#sparse_vec = { path = "../../../sparse_vec"}
sparse_vec = { git = "https://github.com/JojiiOfficial/SparseVec"}
num-traits = "0.2.15"

[dev-dependencies]
test-case = '*'

[features]
default = []
parallel = ["rayon"]
