[package]
name = "japanese"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
itertools = "0.10.5"
wana_kana = { git = "https://github.com/WeDontPanic/wana_kana_rust" }
cached = { version = "0.39.0", default-features = false, features = ["proc_macro"] }

[dev-dependencies]
test-case = "2.2.1"
resources = { path = "../resources" }
japanese = { path = "../japanese" }
