[package]
name = "japanese"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
wana_kana = { git = "https://github.com/WeDontPanic/wana_kana_rust" }
jp_utils = { git = "https://github.com/JojiiOfficial/jp_utils" }
once_cell = "*"

[dev-dependencies]
test-case = "2.2.2"
resources = { path = "../resources" }
japanese = { path = "../japanese" }
