[package]
name = "japanese"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
# wana_kana = { git = "https://github.com/WeDontPanic/wana_kana_rust" }
wana_kana = { git = "https://github.com/PSeitz/wana_kana_rust" }
jp_utils = { git = "https://github.com/JojiiOfficial/jp_utils", features = ["furigana"] }
once_cell = "*"

[dev-dependencies]
test-case = "3.1.0"
resources = { path = "../resources" }
japanese = { path = "../japanese" }
