[package]
name = "localization"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-fmt = "0.3.0"
gettext = "0.4.0"
log = "0.4.17"
strum = "0.24.0"
strum_macros = "0.24.0"
