[package]
name = "models"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse = { path = "../parse" }
japanese = { path = "../japanese" }
cache = { path = "../cache" }
error = { path = "../error" }
utils = { path = "../utils" }
dotenv = "0.15.0"
itertools = "0.10.1"
once_cell = "1.8.0"
r2d2 = "0.8.9"
romaji = "0.1.1"
tokio = { version = "1.9.0", features = ["macros","rt-multi-thread","sync"] }
futures = "0.3.16"
async-std = "1.9.0"
tokio-postgres = "0.7.2"
deadpool-postgres = "0.9.0"
async-trait = "0.1.51"
refinery = { version = "0.6.0", features = ["tokio-postgres"] }
strum = "0.21.0"
strum_macros = "0.21.1"

[features]
default = []
tokenizer = []
