[package]
name = "news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
itertools = "0.10.3"
once_cell = { version = "1.13.0", default-features = false }
comrak = { version = "0.14.0", default-features = false }

[target.'cfg(unix)'.dependencies]
inotify = { version = "0.10.0", optional = true }

[features]
default = []
news_inotify = ["inotify"]
