[package]
name = "news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
itertools = "0.11.0"
once_cell = { version = "1.18.0", default-features = false }
comrak = { version = "0.18.0", default-features = false }

[features]
default = []
