[package]
name = "parse"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.22.0"
strum = { version = "0.21.0", features = ["derive"] }
strum_macros = "0.21.1"
regex = "1.5.4"
localization = { path = "../localization" }
tokio-postgres = "0.7.2"
postgres-types = "0.2.1"
serde = { version = "1.0.126", features = ["derive"]}
serde_derive = "1.0.126"
