[package]
name = "resources"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types", features = ["jotoba_intern"] }
japanese = { path = "../japanese" }
intmap = { git = "https://github.com/JojiiOfficial/rust-intmap" }
serde = { version = "1.0.140", features = ["derive"] }
bincode = "1.3.3"
once_cell = { version = "1.13.0" }
sorted_intersection = "1.2.0"
strum = "0.24.1"
strum_macros = "0.24.2"
ids_parser = { git = "https://github.com/JojiiOfficial/IDS-Parser" }
#ids_parser = { path = "../../../ids_parser" }
