[package]
name = "search"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
japanese = { path = "../japanese" }
sentence_reader = { path = "../sentence_reader", features = ["jotoba_intern"] }
error = { path = "../error" }
utils = { path = "../utils" }
indexes = { path = "../indexes" }
localization = { path = "../localization" }
resources = { path = "../resources" }
types = { path = "../types", default-features = false, features = [
  "jotoba_intern",
] }
log = "0.4.17"
itertools = "0.10.3"
once_cell = "1.12.0"
regex = "1.5.6"
#vector_space_model2 = { path = "../../../VectorSpaceModel" }
vector_space_model2 = { git = "https://github.com/JojiiOfficial/VectorSpaceModel" }
tinysegmenter = "0.1.1"
percent-encoding = "2.1.0"
rayon = "1.5.3"
priority_container = "0.1.1"
#priority_container = {path = "../../../priority_container"}
order_struct = { git = "https://github.com/JojiiOfficial/OrderStruct" }
spin = { version = "0.9.3", default-features = false, features = [
  "spin_mutex",
] }
intmap = { git = "https://github.com/JojiiOfficial/rust-intmap" }

[dev-dependencies]
test-case = "2.1.0"
