[package]
name = "search"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
japanese = { path = "../japanese" }
engine = { path = "../engine" }
sentence_reader = { path = "../sentence_reader", features = ["jotoba_intern"] }
error = { path = "../error" }
utils = { path = "../utils" }
indexes = { path = "../indexes" }
localization = { path = "../localization" }
resources = { path = "../resources" }
types = { path = "../types", default-features = false, features = [
  "jotoba_intern",
] }
log = "0.4.17"
itertools = "0.10.5"
once_cell = { version = "1.15.0", default-features = false }
regex = { version = "1.6.0", features = ["std"], default-features = false }
#vector_space_model2 = { path = "../../../VectorSpaceModel" }
vector_space_model2 = { git = "https://github.com/JojiiOfficial/VectorSpaceModel" }
tinysegmenter = "0.1.1"
percent-encoding = "2.2.0"
rayon = "1.5.3"
#priority_container = { git = "https://github.com/JojiiOfficial/PrioContainer/" }
priority_container = { path = "../../../priority_container" }
order_struct = { git = "https://github.com/JojiiOfficial/OrderStruct" }
spin = { version = "0.9.4", default-features = false, features = [
  "spin_mutex",
] }
intmap = { git = "https://github.com/JojiiOfficial/rust-intmap" }
#ngindex = { path = "../../../ngindex" }
ngindex = { git = "https://github.com/JojiiOfficial/ngindex", rev = "431c1fc9d4387906214f568bb9e2398bc28bb35d" }
#ngindex2 = { path = "../../../ngindex", package = "ngindex" }
#ngindex2 = { git = "https://github.com/JojiiOfficial/ngindex", package = "ngindex" }
ngindex2 = { path ="../../../ngindex", package = "ngindex" }
index_framework = { path = "../../../index_framework" }
#index_framework = { git = "https://github.com/WeDontPanic/index_framework" }
levenshtein = "1.0.5"
vsm = { path = "../../../vsm"}

serde = {version = "*", features=["derive"]}
bincode = "*"
ngram-tools = { path = "../../../ngram-tools"}

[dev-dependencies]
test-case = "2.2.1"
