[package]
name = "search"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
japanese = { path = "../japanese" }
engine = { path = "../engine" }
sentence_reader = { path = "../sentence_reader", features = ["jotoba_intern"] }
error = { path = "../error" }
utils = { path = "../utils" }
indexes = { path = "../indexes" }
localization = { path = "../localization" }
resources = { path = "../resources" }
types = { path = "../types", default-features = false, features = [
  "jotoba_intern",
] }
log = "0.4.17"
itertools = "0.10.5"
once_cell = { version = "1.17.0", default-features = false }
regex = { version = "1.7.0", features = ["std"], default-features = false }
percent-encoding = "2.2.0"
rayon = "1.6.1"
priority_container = { git = "https://github.com/JojiiOfficial/PrioContainer/" }
#priority_container = { path = "../../../priority_container" }
order_struct = { git = "https://github.com/JojiiOfficial/OrderStruct" }
intmap = { git = "https://github.com/JojiiOfficial/rust-intmap" }
#ngindex = { path = "../../../ngindex" }
ngindex = { git = "https://github.com/JojiiOfficial/ngindex"}
#ngindex2 = { path ="../../../ngindex", package = "ngindex" }
#index_framework = { path = "../../../index_framework" }
index_framework = { git = "https://github.com/WeDontPanic/index_framework" }
#vsm = { path = "../../../vsm"}
vsm = { git = "https://github.com/JojiiOfficial/VSM"}
sparse_vec = { git = "https://github.com/JojiiOfficial/SparseVec"}
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
#ngram-tools = { path = "../../../ngram-tools"}
ngram-tools = { git = "https://github.com/JojiiOfficial/ngram-tools"}
jp_utils = { git = "https://github.com/JojiiOfficial/jp_utils"}

[dev-dependencies]
test-case = "2.2.2"
