[package]
name = "sentence_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igo-unidic = { git = "https://github.com/JojiiOfficial/igo-unidic"}
once_cell = "1.10.0"
localization = { path = "../localization", optional = true}
japanese = { path = "../japanese" }
types = {path = "../types"}

[features]
default = []

# This feature adds stuff required for Jotoba to work but not necessarily for extern crates, so its made optional
jotoba_intern = ["localization"]
