[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
bincode = "1.3.3"
types = { path = "../types" , features = ["jotoba_intern"]}
once_cell = "1.12.0"
sorted_intersection = "1.2.0"
intmap = { git = "https://github.com/JojiiOfficial/rust-intmap"}
